# KrabiRobotique

./: .gitignore  Makefile.am  aclocal.m4  configure.ac  missing  openocd.cfg  paprika.cbp  paprika.cbp.in  pre_build  test
simulation/: .cproject  .project  Doxyfile  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure.ac  include  paprika.cbp.in  paprikaSimulateur.cbp  paprikaSimulateur.layout  src  tabledata.xml
simulation/.deps/: Angle.Po  CommandAvancerToutDroit.Po  CommandGoTo.Po  CommandTourner.Po  Graph.Po  GraphWindows.Po  ListeDActions.Po  Position.Po  PositionPlusAngle.Po  action.Po  actionChercherPiece.Po  actionSuivreChemin.Po  asservissement.Po  command.Po  distance.Po  element.Po  main.Po  main_window.Po  objet.Po  pid_filter_angle.Po  pid_filter_distance.Po  robot.Po  strategie.Po  table.Po
simulation/autom4te.cache/: output.0  requests  traces.0  traces.1
simulation/m4/: ax_dep_check.m4
simulation/moc/: GraphWindows.moc  main_window.moc
simulation/qtcreator-files/paprikaSimulateur/: Makefile  moc_GraphWindows.cpp  moc_main_window.cpp  paprikaSimulateur.pro  tabledata.xml  tabledata2014.xml  tabledata2015.xml
simulation/qtcreator-files/paprikaSimulateur-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/: Makefile  moc_GraphWindows.cpp  moc_asservwindow.cpp  moc_bluetoothinterface.cpp  moc_bluetoothwindow.cpp  moc_debugwindow.cpp  moc_main_window.cpp  moc_odometriewindow.cpp  moc_remotedebug.cpp  moc_sharpwindow.cpp  moc_table.cpp  moc_watchwindow.cpp  paprikaSimulateur  ui_asservwindow.h  ui_bluetoothinterface.h  ui_bluetoothwindow.h  ui_debugwindow.h  ui_odometriewindow.h  ui_remotedebug.h  ui_sharpwindow.h  ui_watchwindow.h
simulation/qtcreator-files/paprikaSimulateur-build-desktop-Qt_dans_le_PATH_Release/: Makefile  moc_GraphWindows.cpp  moc_main_window.cpp  paprikaSimulateur  tabledata.xml
stm32/: Doxyfile  Makefile.am  __plot1d.dump  __plot1d.gp  acinclude.m4  configure.ac  main.list  main.out  main107 (copie).bin.Homologation Krabi  main107.list  main107.out  openocd.cfg  openocdH107.cfg  openocdH405.cfg  paprika.cbp  paprika.cbp~  paprika.depend  paprika.layout  paprikaH107.cbp  paprikaH107.cbp~  paprikaH107.depend  paprikaH107.layout  paprikaH107_2.cbp  paprikaH107_2.cbp~  paprikaH107_2.depend  paprikaH107_2.layout  paprikaH107_debugsharp.cbp  paprikaH107_debugsharp.layout  paprikaH405ascortexM3.cbp  paprikaH405ascortexM4.cbp  paprikaH405ascortexM4_2.cbp  paprikaH405ascortexM4_2.cbp~  paprikaH405ascortexM4_2.depend  paprikaH405ascortexM4_2_bis.cbp  paprikaH405ascortexM4_2_bis.layout  paprikaH405ascortexM4_3.cbp  paprikaH405ascortexM4_3.layout  paprikaH405ascortexM4_4.cbp  paprikaH405ascortexM4_4.layout  paprikaH405ascortexM4_5.cbp~  (+45 more)
stm32/Libraries/: Doxyfile
stm32/include/: .interfaceServosNumeriques.h.swp  AnalogSensor.h  Angle.h  Bras.h  Calibration.h  CommandAvancerToutDroit.h  CommandGoTo.h  CommandReculer.h  CommandTouner.h  CommandTourner.h  CommandV2.h  DepotFeu.h  Hctl_Handler.h  InitKrabiJunior.h  KJ2016Tempo.h  LigthBarrierSensor.h  LimitSwitchSensor.h  ListeDActions.h  Moteur.h  Position.h  PositionPlusAngle.h  Sensor.h  Sensors.h  Servo.h  SharpSensor.h  TrapezoidalCommand.h  Turret.h  UltrasoundSensor.h  ValeursRoues.h  action.h  actionChercherPiece.h  actionSuivreChemin.h  analogSensor.h  angle.h  asservissement.h  ax12api.h  bras.h  brasavant.h  capteurs.h  clock.h  (+42 more)
stm32/include/actionneurs/: ascenseur.h  benne.h  brak.h  bras2.h  brasKrabi.h  brasLateraux.h  brasLaterauxJr.h  brasLaterauxKrabi.h  brasTapis.h  brasavant.h  braslateral.h  fishingNet.h  marteaux.h  moteur.h  parasol.h  pinces.h  rateau.h  roues.h  sensor.h  sensors.h  servo.h
stm32/include/asservissement/: asservissement.h  command.h  commandAllerA.h  commandAllerEnArcA.h  commandGoTo.h  commandLookAt.h  commandTest.h  commandTournerVers.h  commandVirage.h  odometrie.h  odometriewindow.cpp  odometriewindow.h  odometriewindow.ui  pidFilterAngle.h  pidFilterDistance.h
stm32/include/hardware/: analogSensor.h  ax12api.h  capteurCouleur.h  capteurs.h  krabipacket.h  leds.h  ligthBarrierSensor.h  limitSwitchSensor.h  microSwitch.h  pwmHandler.h  quadratureCoderHandler.h  remote.h  roue.h  serialCom.h  sharpSensor.h  timerHandler.h  tirette.h  tourelle (copie).h  tourelle.h  ultrasoundSensor.h
stm32/include/simul/: Graph.h  GraphWindows.h  TableGraphics.h  XMLReader.h  asservwindow.cpp  asservwindow.h  asservwindow.ui  bluetoothinterface.cpp  bluetoothinterface.h  bluetoothinterface.ui  bluetoothwindow.cpp  bluetoothwindow.h  bluetoothwindow.ui  bougie.h  contactlistener.h  debugwindow.h  debugwindow.ui  element.h  main.h  main_window.h  objet.h  odometriewindow.h  odometriewindow.ui  remotedebug.h  remotedebug.ui  robot.h  sharpwindow.cpp  sharpwindow.h  sharpwindow.ui  table.h  table.h~  userdata.h  watchwindow.cpp  watchwindow.h
stm32/include/strategie/: ActionManager.h  _etape.h  abeille.h  action.h  actionGoTo.h  actionnerAscenseur.h  actionnerMarteau.h  actionnerPortes.h  benne.h  cabine.h  clap.h  cubeDebut.h  deposeFruits.h  deposerGobelet.h  deposerPied.h  deposerVerres.h  dijkstra.h  dune.h  etape.h  eteindreBougie.h  eteindreBougieV2.h  eteindreBougies.h  evitement.h  feuCote.h  feuCoteKrabi.h  feuKrabi.h  feukrabilateral.h  fresque.h  gobelet.h  goldo2018.h  krabi2014.h  krabi2015.h  (+30 more)
stm32/src/: .interfaceServosNumeriques.cpp.swp  .main.cpp.swp  .main_debut_RD2.cpp.swp  AnalogSensor.cpp  Angle.cpp  Bras.cpp  Calibration.cpp  CommandAvancerToutDroit.cpp  CommandGoTo.cpp  CommandReculer.cpp  CommandTouner.cpp  CommandTourner.cpp  CommandV2.cpp  DepotFeu.cpp  Hctl_Handler.cpp  InitKrabiJunior.cpp  KJ2016Tempo.cpp  LigthBarrierSensor.cpp  LimitSwitchSensor.cpp  ListeDActions.cpp  Moteur.cpp  Position.cpp  PositionPlusAngle.cpp  Rouleau.cpp  Sensor.cpp  Sensors.cpp  Servo.cpp  SharpSensor.cpp  TrapezoidalCommand.cpp  Turret.cpp  UltrasoundSensor.cpp  ValeursCapteurs.cpp  ValeursRoues.cpp  action.cpp  actionChercherPiece.cpp  actionSuivreChemin.cpp  angle.cpp  asservissement.cpp  bras.cpp  brasavant.cpp  (+48 more)
(+353 files in other folders)
